<resources>
    <string name="app_name">Gridline Soccer</string>
    <string name="menu_YouvsAndroid">Practice with Android</string>
    <string name="menu_Player1vsPlayer2">Two players on this device</string>
    <string name="menu_Settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_level">Android level</string>
    <string name="pref_title_block_invite_friend">Block `Invite a Friend` requests</string>
    <string name="pref_summary_block_invite_friend">Other players cannot invite you via `Invite a Friend` (tournaments not affected)</string>
    <string name="pref_title_ads_consent">Personalized ads consent</string>
    <string name="pref_summary_ads_consent">Review or change your consent for displaying personalized ads</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_summary_language">Choose your preferred language</string>
    <string name="current_language">Current: %1$s</string>
    <string name="pref_title_animations">Animations</string>
    <string name="pref_summary_animations">Enable or disable player animations</string>
    <string-array name="pref_level_titles">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string-array name="pref_level_values">
        <item>0</item>
        <item>3</item>
        <item>10</item>
    </string-array>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="hello">Hello!</string>
    <string name="welcome_to_soccer">Welcome to Soccer!</string>
    <string name="hello_nickname">Hello, %1$s!</string>
    <string name="menu_running_player_content_description" translatable="false">Running soccer player animation</string>
    <string name="log_in">Log in</string>
    <string name="register_new_account">Register new account</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_email_hint">Enter your email address</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_message">Please enter your email address. If an account with this email exists, you will receive a password reset email.</string>
    <string name="reset_password_success">If an account with this email exists, a password reset email has been sent.</string>
    <string name="reset_password_failed">Failed to send password reset email. Please try again.</string>
    <string name="nickname">Nickname</string>
    <string name="settings">Settings</string>
    <string name="enter_nickname_to_invite">Enter nickname to invite:</string>
    <string name="enter_nickname_to_search">Enter nickname to search:</string>
    <string name="friend_s_nickname">Friend`s nickname</string>
    <string name="send_invitation">Send Invitation</string>
    <string name="invite_a_friend">Invite a Friend</string>
    <string name="add_a_friend">Add a Friend</string>
    <string name="add_friend">Friend added successfully</string>
    <string name="no_friends">No friends added so far…</string>
    <string name="sort_by_last_seen">Sort by last seen</string>
    <string name="sort_alphabetically">Sort alphabetically</string>
    <string name="no_tournaments">No tournaments have been created yet.</string>
    <string name="please_enter_a_nickname">Please enter a nickname.</string>
    <string name="user_not_found">User not found.</string>
    <string name="you_can_t_invite_yourself">You can`t invite yourself.</string>
    <string name="error_searching_user">Error searching user.</string>
    <string name="invitation_sent">Invitation sent!</string>
    <string name="failed_to_send_invite">Failed to send invite.</string>
    <string name="account_no_longer_available">User account no longer available.</string>
    <string name="failed_to_add_friend">Failed to add friend.</string>
    <string name="failed_to_add_friend_reason">Failed to add friend: %1$s</string>
    <string name="failed_to_load_nickname">Failed to load nickname.</string>
    <string name="search">Search</string>
    <string name="online_only">Hide offline users</string>
    <string name="load_more">Load more</string>
    <string name="failed_to_load_more_invites">Failed to load more invitations</string>
    <string name="add_friend_label">Add to friends</string>
    <string name="add_friend_short_label">Add</string>
    <string name="already_friends">Already friends</string>
    <string name="invite_blocked">%1$s blocked invites.</string>
    <string name="invites_blocked_notification">Other players cannot invite you via `Invite a Friend` function. You can change it in Settings.</string>
    <string name="pending_game_invitations">Pending Game Invitations</string>
    <string name="pending_invites">Pending Invites</string>
    <string name="no_pending_invites">No pending invitations.</string>
    <string name="invite_already_sent">You already have another invite pending.</string>
    <string name="missed_invite_title">You Missed an Invitation</string>
    <string name="missed_invite_message">You received an invitation while you were offline.</string>
    <string name="see_invites">See Invites</string>
    <string name="waiting_for_opponent_named">Waiting for %1$s to accept…</string>
    <string name="waiting_for_opponent">Waiting for opponent to accept…</string>
    <string name="tournaments">Tournaments</string>
    <string name="ranking">Ranking</string>
    <string name="no_ranking_yet">No tournaments were completed to show ranking yet.</string>
    <string name="join">Join</string>
    <string name="slots_format">%1$d / %2$d</string>
    <string name="open">Open</string>
    <string name="lobby_started">Tournament started!</string>
    <string name="ended">Ended…</string>
    <string name="running">Running…</string>
    <string name="registering">Registering…</string>
    <string name="view_results">View Results</string>
    <string name="tournament_running_ends">Tournament running. Ends %1$s</string>
    <string name="registration_ends">Registration ends %1$s</string>
    <string name="registration_closed">Registration closed. Tournament will start within 1 hour</string>
    <string name="tournament_ends_now">Tournament ends now…</string>
    <string name="tournament_ended">Ended %1$s</string>
    <string name="tournament_ended_short">Ended</string>
    <string name="logout">Log out</string>
    <string name="logged_out">You’ve been logged out</string>
    <plurals name="wins_format">
        <item quantity="one">%d win</item>
        <item quantity="other">%d wins</item>
    </plurals>
    <string name="toast_not_your_turn">It’s not your turn yet!</string>
    <string name="five_minutes">05:00</string>
    <string name="cancel_invite">Cancel invite</string>
    <string name="remove">Remove</string>
    <string name="invite_expired">Invitation expired.</string>
    <string name="leave">Leave</string>
    <string name="leave_tournament_confirm">Are you sure you want to leave this tournament?</string>
    <string name="left_tournament">You left the tournament.</string>
    <string name="leave_waiting_confirm">Leaving the waiting screen will cancel your invitation. Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="target_player_busy">That player is already busy with another invitation.</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="match_completed_win">completed, you won 🏆</string>
    <string name="match_completed_lose">completed, you lost 😞</string>
    <string name="regulation_not_found">Regulation not found.</string>
    <string name="regulation_load_error">Failed to load regulation.</string>
    <string name="regulation_auth_required">Please log in to view the regulation.</string>
    <string name="eligibility_confirmation_title">Required confirmations</string>
    <string name="eligibility_confirm_age">I confirm that I am at least %1$d years old.</string>
    <string name="eligibility_confirm_payout_account">I confirm that I have an active account with at least one payout method supported by these rules: %1$s.</string>
    <string name="eligibility_confirm_terms">I have read and accept these tournament and prize rules.</string>
    <string name="eligibility_confirmation_required">Select all required confirmations to join this tournament.</string>
    <string name="eligibility_configuration_error">This tournament has an invalid eligibility configuration.</string>
    <string name="server_unavailable">Server Unavailable</string>
    <string name="server_unavailable_message">We are sorry, but the Soccer server is not available at the moment…</string>
    <string name="account">Account</string>
    <string name="account_information">Account information</string>
    <string name="nickname_label">Nickname: %1$s</string>
    <string name="email_label">Email: %1$s</string>
    <string name="not_registered">You are not registered for this tournament.</string>
    <string name="login_email">Login with Email</string>
    <string name="login_google">Login with Google</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="login_microsoft">Login with Microsoft</string>
    <string name="login_anonymous">Login Anonymously</string>
    <string name="facebook_app_id" translatable="false">1232966491486195</string>
    <string name="facebook_client_token" translatable="false">CLIENT_TOKEN_TO_BE_CONFIGURED</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1232966491486195</string>
    <string name="login_method_label">Login method: %1$s</string>
    <string name="facebook_id_label">Facebook ID: %1$s</string>
    <string name="facebook_name_label">Facebook Name: %1$s</string>
    <string name="pref_title_facebook">Facebook community</string>
    <string name="pref_summary_facebook">Open our community page on Facebook</string>
    <string name="ads_consent_required">Showing ads is helping to finance infrastructure maintenance. You can always check your consent in settings.</string>
    <string name="confirm">Confirm</string>
    <string name="no_internet_for_privacy_options">Internet connection required to open privacy options.</string>
    <string name="remove_account">Remove account</string>
    <string name="remove_account_dialog_title">Remove Account</string>
    <string name="remove_account_dialog_message">Are you sure you want to remove your account? This action cannot be reverted and even if you register again, you will not get access to the history of your matches and results.</string>
    <string name="cancel">Cancel</string>
    <string name="proceed_account_removal">Proceed</string>
    <string name="checking_nickname">Checking nickname…</string>
    <string name="link_account_title">Link Anonymous Account</string>
    <string name="link_account_description">Link your anonymous account with email, Google, or Facebook to secure your account and game history.</string>
    <string name="link_with_email">Link with Email</string>
    <string name="link_with_google">Link with Google</string>
    <string name="link_with_facebook">Link with Facebook</string>
    <string name="signup_decline_dialog_message">Help us understand why you prefer not to register:</string>
    <string name="decline_reason_offline">Just playing offline</string>
    <string name="decline_reason_privacy">Privacy concerns</string>
    <string name="decline_reason_complicated">Too complicated</string>
    <string name="decline_reason_dont_use_providers">Don`t use Google/Facebook/Email</string>
    <string name="decline_reason_other">Other reason</string>
    <string name="menu_loading_message">Loading…</string>
</resources>