<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <ListPreference
            android:key="android_level"
            android:title="@string/pref_title_level"
            android:defaultValue="1"
            android:entries="@array/pref_level_titles"
            android:entryValues="@array/pref_level_values"
            android:icon="@drawable/ic_bullet" />

        <CheckBoxPreference
            android:key="block_invite_friend"
            android:title="@string/pref_title_block_invite_friend"
            android:summary="@string/pref_summary_block_invite_friend"
            android:defaultValue="false"
            android:icon="@drawable/ic_block" />

        <CheckBoxPreference
            android:key="ads_consent"
            android:title="@string/pref_title_ads_consent"
            android:summary="@string/pref_summary_ads_consent"
            android:defaultValue="false"
            android:icon="@android:drawable/ic_dialog_info" />

        <CheckBoxPreference
            android:key="animations_enabled"
            android:title="@string/pref_title_animations"
            android:summary="@string/pref_summary_animations"
            android:defaultValue="true"
            android:icon="@android:drawable/ic_media_play" />

        <Preference
            android:key="language_preference"
            android:title="@string/pref_title_language"
            android:summary="@string/pref_summary_language"
            android:icon="@android:drawable/ic_menu_preferences" />

        <Preference
            android:key="facebook_community"
            android:title="@string/pref_title_facebook"
            android:summary="@string/pref_summary_facebook"
            android:icon="@drawable/ic_facebook" />

</PreferenceScreen>
