<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/link_account_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:title="@string/link_account_title"
        app:titleTextColor="@color/colorWhite" />

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorWhite"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_account_description"
            android:textColor="@color/colorGreenDark"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginBottom="30dp" />

        <Button
            android:id="@+id/btnEmailLink"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:paddingStart="8dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorGreenDark"
            android:drawableStart="@drawable/ic_email_bg"
            android:drawablePadding="8dp"
            android:text="@string/link_with_email"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnGoogleLink"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:paddingStart="8dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorGreenDark"
            android:drawableStart="@drawable/ic_google_bg"
            android:drawablePadding="8dp"
            android:text="@string/link_with_google"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />



        <Button
            android:id="@+id/btnFacebookLink"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:paddingStart="8dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorGreenDark"
            android:drawableStart="@drawable/ic_facebook_bg"
            android:drawablePadding="8dp"
            android:text="@string/link_with_facebook"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>
</LinearLayout>